--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                   <a href="index.html#about" class="scrollto wow fadeInUp delay-5s ">
 			            <p>SEE MORE</p>
-			            <p class="scrollto--arrow"><img src="img/scroll-down.png" alt="scroll down arrow"></p>
+			            <p class="scrollto--arrow"><img src="img/scroll-down-grey.png" alt="scroll down arrow"></p>
 			        </a>
                 </div>
               </div>
@@ -116,7 +116,7 @@
 
 
 
-<!-- ==========================
+		<!-- ==========================
         SERVICE SECTION 
         =========================== -->
         <section class="features text-center section-padding" id="service">
@@ -206,13 +206,10 @@
 		<!-- ==========================
         ABOUT SECTION END
         =========================== -->	
-
-		
-		
 		
 		<!-- ==========================
         PORTFOLIO SECTION
-    =========================== -->
+		=========================== -->
         <section class="swag text-center" id="portfolio">
           <div class="container">
 		    <!-- Headline -->
@@ -322,7 +319,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <a href="index.html#contact" class="outline-btn">hire john doe</a>
+                <a href="index.html#contact" class="outline-btn">hire Aravind Unnikrishnan</a>
               </div>
             </div>
           </div>
@@ -468,7 +465,7 @@
 				<div class="row color-bg">
 				    <div class="col-md-6 nopadding subscribe text-center">
 					 <h1><i class="fa fa-paper-plane"></i><span>Subscribe our Newsletter</span></h1><!-- Heading -->
-                     <form action="index.html#">
+                     <form action="mailto:aravindmathradan@gmail.com">
                        <input type="text" name="" value="" placeholder="" required><!-- E-Mail -->
                        <input type="submit" name="" value="Send"><!-- Submit Button -->
                     </form>   
