Added linked in badge to page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Personal static portfolio website of a computer science enthusiast, Aravind Unnikrishnan studying in Indian Institute of Information Technology, Pune.">
     <meta name="google-site-verification" content="TohECWfjG2P5AkDq6W5i9JLT_Uq6txfvw5dk4LdDuUo" />
 	<!-- Website Title -->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <title>Aravind Unnikrishnan</title>
     <!-- Bootstrap -->
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -561,6 +562,7 @@ and collaborating to widen the reach and fix the existing loopholes in computer 
 			  </div>
 			</div>
 			<br>
+			
 			<!-- Social Buttons - use font-awesome, past in what you want -->
             <div class="row">
               <div class="col-md-12">
@@ -573,6 +575,8 @@ and collaborating to widen the reach and fix the existing loopholes in computer 
                 </ul>
               </div>
             </div>
+            <br>
+            <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="aravind-unnikrishnan"><a class="LI-simple-link" href='https://in.linkedin.com/in/aravind-unnikrishnan?trk=profile-badge'>Aravind Unnikrishnan</a></div>
           </div>
         </section>
 		<!-- ==========================
