--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="p:domain_verify" content="7bde276faafbd768594d7f56e7b119f5"/>
     <meta name="HandheldFriendly" content="true">
-    <meta name="description" content="Personal static portfolio website of a computer science enthusiast, Aravind Unnikrishnan studying in Indian Institute of Information Technology, Pune.">
+    <meta name="description" content="Personal static portfolio website of a computer science enthusiast, Aravind Unnikrishnan pursuing B.Tech from Indian Institute of Information Technology, Pune.">
     <meta name="google-site-verification" content="TohECWfjG2P5AkDq6W5i9JLT_Uq6txfvw5dk4LdDuUo" />
 	<!-- Website Title -->
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
