--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello!👋</div>
-                <div class="text-2">I'm <b>Aravind Unnikrishnan</b>, a design-minded front-end software engineer focused on building beautiful interfaces & experiences.</div>
+                <div class="text-2">I'm <b>Aravind Unnikrishnan</b>, a design-minded software engineer focused on building efficient softwares & experiences.</div>
             </div>
         </div>
     </section>
@@ -40,8 +40,12 @@
         <div class="max-width">
             <h2 class="title">About me</h2>
             <div class="about-content">
-                <p>lskdflskjh sdkf skdhf sdkhfsdkhfskd fsdkjfhskdjfhs fksdjhfsdkfhsdfi skdhf sdkfh sdfkjhsdkjfhsd kshdf ksdhf skdjhfskahf ksjahfs dfskdjhfskdfhs fsdkfhskjdhfskfhskfh skdfhskfhs fksjhd fsdkf sdkjfhsf skdhfskjfhsdf skdjfhskfh sfdksdjf sdkfhskfhskfhskfsf sdjfhslkfh skdjfh ksfd f ksajdhfska jkhsd fksjdfh  kasjdfhaks asdkjfhskdf sadfkjhsdf skfjhjh sakj fsdkhsdkfhsfk skjfdhskjhdfsdhf kajhfdfjdfsdfdskj sdfkjhsfk sfdkjfsfh sakdfjhskdfhskhdf sdjfhskjdfh askdfhskjfdh fasldkfjhsjkdfhs faskdfhsk fdshskdf sdfhskjfhskdhf ksdjhfjksdhfksjdfh sdfkhsakdfjh sdk sdkjfhsdkjfhsdkjn dsfkjhsd fisodufhiwu knsd fmn fsdjfhfvv kjsfdn sdfhlka nmz,cnmv ljsfdhiusdfy sfdhjksf fh kjsdflafafksh skdfhsdjfhsiuwjiohskfjd ffjls afksjahf faskjdhfsfskjfhskjfhsfhsf skajfhsakf sfkdjhfskdfjh sdkjfdsf kjshfjsf sjhfskjfhsdfjkl sdfkjhdfkjhfsd sfdkjhas hf faskjdhfsfskjfhskjfhsfhsf skajfhsakf sfkdjhfskdfjh sdkjfdsf kjshfjsf sjhfskjfhsdfjkl sdfkjhdfkjhfsd sfdkjhas fh ksfd f ksajdhfska jkhsd fksjdfh  kasjdfhaks asdkjfhskdf sadfkjhsdf skfjhjh sakj fsdkhsdkfhsfk skjfdhskjhdfsdhf</p>
-                <a href="#">Download CV</a>
+                <p>
+                    I'm a final year undergraduate at Indian Institute of Information Technology Pune majoring in Computer Science and Engineering, a programmer by passion and an open-source enthusiast, relentlessly learning and looking forward to contribute to the advancement of computer science.
+                    In my first three years at college, I had been working on machine learning related projects. During the summer internship in my sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in Pregnancy" with him.
+                    Recently, front-end and back-end web development caught my interest line and I've been working on web based projects since then.
+                </p>
+                <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing" target="_blank" rel="noopener noreferrer">Download CV</a>
             </div>
         </div>
     </section>
@@ -128,11 +132,11 @@
                 <b>Book : </b> Proceedings of International Conference on Recent Trends in Machine Learning, IoT, Smart Cities and Applications.<br>
                 <b>Published on : </b> 18 October 2020 <br>
                 <b>DOI : </b> <a href="https://doi.org/10.1007/978-981-15-7234-0_47">https://doi.org/10.1007/978-981-15-7234-0_47</a>
-
             </div>
         </div>
     </section>
 
+<!-- 
     <section class="projects" id="projects">
         <div class="max-width">
             <h2 class="title">Featured Projects</h2>
@@ -143,6 +147,73 @@
             </div>
         </div>
     </section>
+
+     -->
+
+     <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fa fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Aravind Unnikrishnan</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fa fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">"Indeevaram", Kakkuzhipalam road, P.O. Karaparamba, Kozhikode, Kerala, India</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fa fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">aravindmathradan@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Write a message..." required></textarea>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <span>Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span class="social">
+            <i class="fab fa-github"></i><a href="https://github.com/aravindmathradan">aravindmathradan</a>
+            <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/aravind-unnikrishnan/">aravind-unnikrishnan</a>
+            <i class="fab fa-instagram"></i><a href="https://www.instagram.com/aravind.in/">aravind.in</a>
+            <i class="fab fa-twitter"></i><a href="https://twitter.com/arvnd_in">arvnd_in</a>
+        </span>
+    </footer>
 
     <script src="js/script.js"></script>
 </body>
