--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aravind Unnikrishnan</title>
+    <link rel="icon" href="./img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Portfolio.</a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Publications</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <!-- <li><a href="#">Projects</a></li> -->
+                <li><a href="#contact">Contact</a></li>
             </ul>
 
             <div class="menu-btn">
@@ -206,7 +210,7 @@
     </section>
 
     <footer>
-        <span>Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span class="credit">Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
         <span class="social">
             <i class="fab fa-github"></i><a href="https://github.com/aravindmathradan">aravindmathradan</a>
             <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/aravind-unnikrishnan/">aravind-unnikrishnan</a>
