Added section "Featured projects"

--- a/index.html
+++ b/index.html
@@ -135,26 +135,40 @@
                 with <b><a href="https://scholar.google.com/citations?user=hnQ-pPEAAAAJ&hl=th">Dr. K. Chandrasekaran</a></b> and <b><a href="https://scholar.google.co.in/citations?user=3zztZKMAAAAJ&hl=en">Dr. Anupam Shukla</a></b><br>
                 <b>Book : </b> Proceedings of International Conference on Recent Trends in Machine Learning, IoT, Smart Cities and Applications.<br>
                 <b>Published on : </b> 18 October 2020 <br>
-                <b>DOI : </b> <a href="https://doi.org/10.1007/978-981-15-7234-0_47">https://doi.org/10.1007/978-981-15-7234-0_47</a>
+                <b>DOI : </b> <a href="https://doi.org/10.1007/978-981-15-7234-0_47" target="_blank" rel="noopener noreferrer">https://doi.org/10.1007/978-981-15-7234-0_47</a>
             </div>
         </div>
     </section>
 
-<!-- 
     <section class="projects" id="projects">
         <div class="max-width">
             <h2 class="title">Featured Projects</h2>
             <div class="projects-content">
-                <div class="column left">
-                    <img src="img/lantern.png" alt="" height="500" width="700">
+                <div class="item">
+                    <div class="column left">
+                        <img src="img/lantern.png" alt="">
+                    </div>
+                    <div class="column right">
+                        <h3 class="project-title">Lantern.io</h3>
+                        <p>An open-source in-browser markdown editor for modern note-taking.</p>
+                        <a href="https://lantern-notes.herokuapp.com/" target="_blank" rel="noopener noreferrer">Open app</a>
+                    </div>
+                </div>
+                <div class="item alt">
+                    <div class="column left">
+                        <img src="img/popcorn.png" alt="">
+                    </div>
+                    <div class="column right">
+                        <h3 class="project-title">Popcorn</h3>
+                        <p>A cross-platform watch-party desktop video player for synchronized and seamless binging.</p>
+                        <a href="https://drive.google.com/drive/u/0/folders/1kwU0XvyKbPKXGJ42bYVqBO-OQVYYWBrs" target="_blank" rel="noopener noreferrer">Download for desktop</a>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-     -->
-
-     <section class="contact" id="contact">
+    <section class="contact" id="contact">
         <div class="max-width">
             <h2 class="title">Contact me</h2>
             <div class="contact-content">
