--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#publications">Publications</a></li>
-                <!-- <li><a href="#">Projects</a></li> -->
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
 
