Added other projects section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfolio.</a></div>
+            <div class="logo" style="visibility: hidden;"><a href="#">Aravind.</a></div>
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -34,7 +34,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">Hello!👋</div>
+                <div class="text-1">Hello!</div>
                 <div class="text-2">I'm <b>Aravind Unnikrishnan</b>, a design-minded software engineer focused on building efficient softwares & experiences.</div>
             </div>
         </div>
@@ -45,9 +45,10 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <p>
-                    I'm a final year undergraduate at Indian Institute of Information Technology Pune majoring in Computer Science and Engineering, a programmer by passion and an open-source enthusiast, relentlessly learning and looking forward to contribute to the advancement of computer science.
-                    In my first three years at college, I had been working on machine learning related projects. During the summer internship in my sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in Pregnancy" with him.
-                    Recently, front-end and back-end web development caught my interest line and I've been working on web based projects since then.
+                    I'm a final year undergraduate at Indian Institute of Information Technology Pune majoring in Computer Science and Engineering, a programmer by passion and an open-source enthusiast, looking forward to contribute to the advancement of computer science.
+                    I, along with my team, had won the Smart India Hackathon 2019 edition for the problem statement "Inconsistency detection in medical annotations" under ezDI. During the summer internship in my sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal 
+                    and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in Pregnancy".
+                    Recently, I've been developing few web applications, exploring MERN stack, web sockets and cloud databases.
                 </p>
                 <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing" target="_blank" rel="noopener noreferrer">Download CV</a>
             </div>
@@ -164,6 +165,32 @@
                         <a href="https://drive.google.com/drive/u/0/folders/1kwU0XvyKbPKXGJ42bYVqBO-OQVYYWBrs" target="_blank" rel="noopener noreferrer">Download for desktop</a>
                     </div>
                 </div>
+            </div>
+            <h2 class="title" style="margin-top: 20px;">Other Works</h2>
+            <div class="projects-content">
+                <table class="projects-table">
+                    <tr>
+                        <th>&bull;&emsp;Gesture Games</th>
+                        <td>An in-browser gaming arena for gesture and voice controlled games. <a href="https://gesture-games.herokuapp.com/" target="_blank" rel="noopener noreferrer">[Webapp]</a> <a href="https://github.com/aravindmathradan/gesture-games">[Github]</a></td>
+                    </tr>
+                    <tr>
+                        <th>&bull;&emsp;Gesture based Browser Control</th>
+                        <td>A Chrome extension to enable scrolling webpages and taking screenshots with simple hand gestures. <a href="https://github.com/aravindmathradan/gesture-scroll" target="_blank" rel="noopener noreferrer">[Github]</a></td>
+                    </tr>
+                    <tr>
+                        <th>&bull;&emsp;Inconsistency detection in medical Annotations</th>
+                        <td>An end-to-end Django based web-app with UMLS parsing in back-end to detect inconsistent annotations in medical
+                            corpus, for medical data science research. <a href="https://github.com/aravindmathradan/SIH19_ezDI" target="_blank" rel="noopener noreferrer">[Github]</a></td>
+                    </tr>
+                    <tr>
+                        <th>&bull;&emsp;Malicious URL detection</th>
+                        <td>A machine learning model to detect malicious phishing URLs with an accuracy of 97.7%.</td>
+                    </tr>
+                    <tr>
+                        <th>&bull;&emsp;Movie Recommendation Engine</th>
+                        <td>Movie Recommendation system based on Collaborative Filtering using MovieLens Data set.</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </section>
