--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aravind Unnikrishnan</title>
+    <title>Aravind Unnikrishnan - Software Engineer</title>
+    <meta name="keywords" content="Aravind, Unnikrishnan, Aravind Unnikrishnan, Portfolio, Personal Website, Data-Driven Stillbirth Prediction, Analysis of Risk Factors in Pregnancy, IIIT Pune, Indian Institute of Information Technology Pune, IIIT, Pune, aravindmathradan, software engineer, developer, lantern, popcorn, gesture-games, gesture-scroll, markdown editor">
+    <meta name="description" content="Portfolio website of Aravind Unnikrishnan, a software developer and designer.">
     <link rel="icon" href="./img/favicon.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -147,7 +149,7 @@
             <div class="projects-content">
                 <div class="item">
                     <div class="column left">
-                        <img src="img/lantern.png" alt="">
+                        <img src="img/lantern.png" alt="Aravind Unnikrishnan Lantern.io">
                     </div>
                     <div class="column right">
                         <h3 class="project-title">Lantern.io</h3>
@@ -157,7 +159,7 @@
                 </div>
                 <div class="item alt">
                     <div class="column left">
-                        <img src="img/popcorn.png" alt="">
+                        <img src="img/popcorn.png" alt="Aravind Unnikrishnan Popcorn app">
                     </div>
                     <div class="column right">
                         <h3 class="project-title">Popcorn</h3>
