--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aravind Unnikrishnan - Software Engineer</title>
-    <meta name="keywords" content="Aravind, Unnikrishnan, Aravind Unnikrishnan, Portfolio, Personal Website, Data-Driven Stillbirth Prediction, Analysis of Risk Factors in Pregnancy, IIIT Pune, Indian Institute of Information Technology Pune, IIIT, Pune, aravindmathradan, software engineer, developer, lantern, popcorn, gesture-games, gesture-scroll, markdown editor">
+    <meta name="keywords"
+        content="Aravind, Unnikrishnan, Aravind Unnikrishnan, Portfolio, Personal Website, Data-Driven Stillbirth Prediction, Analysis of Risk Factors in Pregnancy, IIIT Pune, Indian Institute of Information Technology Pune, IIIT, Pune, aravindmathradan, software engineer, developer, lantern, popcorn, gesture-games, gesture-scroll, markdown editor">
     <meta name="description" content="Portfolio website of Aravind Unnikrishnan, a software developer and designer.">
     <link rel="icon" href="./img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
+
 <body>
     <div class="scroll-up-btn">
         <i class="fas fa-angle-up"></i>
@@ -37,7 +42,8 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello!</div>
-                <div class="text-2">I'm <b>Aravind Unnikrishnan</b>, a design-minded software engineer focused on building efficient softwares & experiences.</div>
+                <div class="text-2">I'm <b>Aravind Unnikrishnan</b>, a design-minded developer focused on building
+                    efficient softwares & experiences.</div>
             </div>
         </div>
     </section>
@@ -47,12 +53,19 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <p>
-                    I'm a final year undergraduate at Indian Institute of Information Technology Pune majoring in Computer Science and Engineering, a programmer by passion and an open-source enthusiast, looking forward to contribute to the advancement of computer science.
-                    I, along with my team, had won the Smart India Hackathon 2019 edition for the problem statement "Inconsistency detection in medical annotations" under ezDI. During the summer internship in my sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal 
-                    and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in Pregnancy".
-                    Recently, I've been developing few web applications, exploring MERN stack, web sockets and cloud databases.
+                    I'm a final year undergraduate at Indian Institute of Information Technology Pune majoring in
+                    Computer Science and Engineering, a programmer by passion and an open-source enthusiast, looking
+                    forward to contribute to the advancement of computer science.
+                    I, along with my team, had won the Smart India Hackathon 2019 edition for the problem statement
+                    "Inconsistency detection in medical annotations" under ezDI. During the summer internship in my
+                    sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal
+                    and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in
+                    Pregnancy".
+                    Recently, I've been developing few web applications, exploring MERN stack, web sockets and cloud
+                    databases.
                 </p>
-                <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing" target="_blank" rel="noopener noreferrer">Download CV</a>
+                <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing"
+                    target="_blank" rel="noopener noreferrer">Download CV</a>
             </div>
         </div>
     </section>
@@ -134,11 +147,17 @@
         <div class="max-width">
             <h2 class="title">Publications</h2>
             <div class="pubs-content">
-                <h3><a href="https://link.springer.com/chapter/10.1007/978-981-15-7234-0_47">Data-Driven Stillbirth Prediction and Analysis of Risk Factors in Pregnancy</a></h3>
-                with <b><a href="https://scholar.google.com/citations?user=hnQ-pPEAAAAJ&hl=th">Dr. K. Chandrasekaran</a></b> and <b><a href="https://scholar.google.co.in/citations?user=3zztZKMAAAAJ&hl=en">Dr. Anupam Shukla</a></b><br>
-                <b>Book : </b> Proceedings of International Conference on Recent Trends in Machine Learning, IoT, Smart Cities and Applications.<br>
+                <h3><a href="https://link.springer.com/chapter/10.1007/978-981-15-7234-0_47">Data-Driven Stillbirth
+                        Prediction and Analysis of Risk Factors in Pregnancy</a></h3>
+                with <b><a href="https://scholar.google.com/citations?user=hnQ-pPEAAAAJ&hl=th">Dr. K.
+                        Chandrasekaran</a></b> and <b><a
+                        href="https://scholar.google.co.in/citations?user=3zztZKMAAAAJ&hl=en">Dr. Anupam
+                        Shukla</a></b><br>
+                <b>Book : </b> Proceedings of International Conference on Recent Trends in Machine Learning, IoT, Smart
+                Cities and Applications.<br>
                 <b>Published on : </b> 18 October 2020 <br>
-                <b>DOI : </b> <a href="https://doi.org/10.1007/978-981-15-7234-0_47" target="_blank" rel="noopener noreferrer">https://doi.org/10.1007/978-981-15-7234-0_47</a>
+                <b>DOI : </b> <a href="https://doi.org/10.1007/978-981-15-7234-0_47" target="_blank"
+                    rel="noopener noreferrer">https://doi.org/10.1007/978-981-15-7234-0_47</a>
             </div>
         </div>
     </section>
@@ -154,7 +173,8 @@
                     <div class="column right">
                         <h3 class="project-title">Lantern.io</h3>
                         <p>An open-source in-browser markdown editor for modern note-taking.</p>
-                        <a href="https://lantern-notes.herokuapp.com/" target="_blank" rel="noopener noreferrer">Open app</a>
+                        <a href="https://lantern-notes.herokuapp.com/" target="_blank" rel="noopener noreferrer">Open
+                            app</a>
                     </div>
                 </div>
                 <div class="item alt">
@@ -164,7 +184,8 @@
                     <div class="column right">
                         <h3 class="project-title">Popcorn</h3>
                         <p>A cross-platform watch-party desktop video player for synchronized and seamless binging.</p>
-                        <a href="https://drive.google.com/drive/u/0/folders/1kwU0XvyKbPKXGJ42bYVqBO-OQVYYWBrs" target="_blank" rel="noopener noreferrer">Download for desktop</a>
+                        <a href="https://drive.google.com/drive/u/0/folders/1kwU0XvyKbPKXGJ42bYVqBO-OQVYYWBrs"
+                            target="_blank" rel="noopener noreferrer">Download for desktop</a>
                     </div>
                 </div>
             </div>
@@ -173,16 +194,24 @@
                 <table class="projects-table">
                     <tr>
                         <th>&bull;&emsp;Gesture Games</th>
-                        <td>An in-browser gaming arena for gesture and voice controlled games. <a href="https://gesture-games.herokuapp.com/" target="_blank" rel="noopener noreferrer">[Webapp]</a> <a href="https://github.com/aravindmathradan/gesture-games">[Github]</a></td>
+                        <td>An in-browser gaming arena for gesture and voice controlled games. <a
+                                href="https://gesture-games.herokuapp.com/" target="_blank"
+                                rel="noopener noreferrer">[Webapp]</a> <a
+                                href="https://github.com/aravindmathradan/gesture-games">[Github]</a></td>
                     </tr>
                     <tr>
                         <th>&bull;&emsp;Gesture based Browser Control</th>
-                        <td>A Chrome extension to enable scrolling webpages and taking screenshots with simple hand gestures. <a href="https://github.com/aravindmathradan/gesture-scroll" target="_blank" rel="noopener noreferrer">[Github]</a></td>
+                        <td>A Chrome extension to enable scrolling webpages and taking screenshots with simple hand
+                            gestures. <a href="https://github.com/aravindmathradan/gesture-scroll" target="_blank"
+                                rel="noopener noreferrer">[Github]</a></td>
                     </tr>
                     <tr>
                         <th>&bull;&emsp;Inconsistency detection in medical Annotations</th>
-                        <td>An end-to-end Django based web-app with UMLS parsing in back-end to detect inconsistent annotations in medical
-                            corpus, for medical data science research. <a href="https://github.com/aravindmathradan/SIH19_ezDI" target="_blank" rel="noopener noreferrer">[Github]</a></td>
+                        <td>An end-to-end Django based web-app with UMLS parsing in back-end to detect inconsistent
+                            annotations in medical
+                            corpus, for medical data science research. <a
+                                href="https://github.com/aravindmathradan/SIH19_ezDI" target="_blank"
+                                rel="noopener noreferrer">[Github]</a></td>
                     </tr>
                     <tr>
                         <th>&bull;&emsp;Malicious URL detection</th>
@@ -214,7 +243,8 @@
                             <i class="fa fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">"Indeevaram", Kakkuzhipalam road, P.O. Karaparamba, Kozhikode, Kerala, India</div>
+                                <div class="sub-title">"Indeevaram", Kakkuzhipalam road, P.O. Karaparamba, Kozhikode,
+                                    Kerala, India</div>
                             </div>
                         </div>
                         <div class="row">
@@ -253,10 +283,12 @@
     </section>
 
     <footer>
-        <span class="credit">Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2020 All rights reserved.</span>
+        <span class="credit">Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2020 All rights
+            reserved.</span>
         <span class="social">
             <i class="fab fa-github"></i><a href="https://github.com/aravindmathradan">aravindmathradan</a>
-            <i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/aravind-unnikrishnan/">aravind-unnikrishnan</a>
+            <i class="fab fa-linkedin"></i><a
+                href="https://www.linkedin.com/in/aravind-unnikrishnan/">aravind-unnikrishnan</a>
             <i class="fab fa-instagram"></i><a href="https://www.instagram.com/aravind.in/">aravind.in</a>
             <i class="fab fa-twitter"></i><a href="https://twitter.com/arvnd_in">arvnd_in</a>
         </span>
@@ -264,4 +296,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
