--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </tr>
                     <tr>
                         <td>C/C++</td>
-                        <td>HTML5</td>
+                        <td>React</td>
                         <td>Node</td>
                         <td>Pandas</td>
                         <td>MySQL</td>
@@ -95,7 +95,7 @@
                     </tr>
                     <tr>
                         <td>JavaScript (ES6)</td>
-                        <td>CSS3</td>
+                        <td>HTML5</td>
                         <td>Express</td>
                         <td>Numpy</td>
                         <td>Firebase</td>
@@ -104,7 +104,7 @@
                     </tr>
                     <tr>
                         <td>Python</td>
-                        <td>Vanilla JS</td>
+                        <td>CSS3</td>
                         <td>Socket.io</td>
                         <td>Scikit-learn</td>
                         <td>SQLite</td>
