--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo" style="visibility: hidden;"><a href="#">Aravind.</a></div>
+            <div class="logo" style="visibility: hidden;"><a href="#">Portfolio.</a></div>
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
