--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal
                     and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in
                     Pregnancy".
-                    Recently, I've been developing few web applications, exploring MERN stack, web sockets and cloud
+                    Recently, I've been developing web applications, exploring MERN stack, web sockets and cloud
                     databases.
                 </p>
                 <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing"
@@ -105,16 +105,16 @@
                     <tr>
                         <td>Python</td>
                         <td>CSS3</td>
-                        <td>Socket.io</td>
+                        <td>Loopback</td>
                         <td>Scikit-learn</td>
                         <td>SQLite</td>
                         <td>Latex</td>
-                        <td></td>
+                        <td>Mac OS</td>
                     </tr>
                     <tr>
                         <td>Java</td>
                         <td></td>
-                        <td>Django</td>
+                        <td>Socket.io</td>
                         <td>D3.js</td>
                         <td></td>
                         <td></td>
@@ -123,7 +123,7 @@
                     <tr>
                         <td>GNU Octave</td>
                         <td></td>
-                        <td>PHP</td>
+                        <td>Django</td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -132,7 +132,7 @@
                     <tr>
                         <td>SQL</td>
                         <td></td>
-                        <td>Firebase</td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
