--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#publications">Publications</a></li>
+                <li><a href="#publications">Research</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -145,7 +145,7 @@
 
     <section class="publications" id="publications">
         <div class="max-width">
-            <h2 class="title">Publications</h2>
+            <h2 class="title">Research</h2>
             <div class="pubs-content">
                 <h3><a href="https://link.springer.com/chapter/10.1007/978-981-15-7234-0_47">Data-Driven Stillbirth
                         Prediction and Analysis of Risk Factors in Pregnancy</a></h3>
