contact me has been disabled

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Message me</div>
+                    <div class="text">Message me (currently unavailable)</div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
@@ -274,7 +274,7 @@
                             <textarea cols="30" rows="10" placeholder="Write a message..." required></textarea>
                         </div>
                         <div class="button">
-                            <button type="submit">Send</button>
+                            <button type="submit" id='mail-send'>Send</button>
                         </div>
                     </form>
                 </div>
