--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <p>
-                    I'm a final year undergraduate at Indian Institute of Information Technology Pune majoring in
+                    I'm a final year undergraduate at the Indian Institute of Information Technology Pune majoring in
                     Computer Science and Engineering, a programmer by passion and an open-source enthusiast, looking
                     forward to contribute to the advancement of computer science.
                     I, along with my team, had won the Smart India Hackathon 2019 edition for the problem statement
