Minor content and style fix

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     databases.
                 </p>
                 <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing"
-                    target="_blank" rel="noopener noreferrer">Download CV</a>
+                    target="_blank" rel="noopener noreferrer">View Resume</a>
             </div>
         </div>
     </section>
