--- a/index.html
+++ b/index.html
@@ -53,16 +53,19 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <p>
-                    I'm a final year undergraduate at the Indian Institute of Information Technology Pune majoring in
-                    Computer Science and Engineering, a programmer by passion and an open-source enthusiast, looking
-                    forward to contribute to the advancement of computer science.
-                    I, along with my team, had won the Smart India Hackathon 2019 edition for the problem statement
-                    "Inconsistency detection in medical annotations" under ezDI. During the summer internship in my
-                    sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal
-                    and published a research paper on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in
-                    Pregnancy".
-                    Recently, I've been developing web applications, exploring MERN stack, web sockets and cloud
-                    databases.
+                    I'm a software developer and an open-source enthusiast currently building highly powerful software 
+                    suite at valuefy technologies for wealth management companies in and outside India. I do development 
+                    as a profession and a hobby due to which I find myself building softwares in my free time to solve 
+                    problems (sometimes non-existent) that could potentially help people. Due to my lack of motivation 
+                    to sell, whatever I build usually goes to a cold repo in my github and in turn to the freezing artic 
+                    code vault, lacking any purpose yet.
+                    Back in the college days, I, obviously with my team, had won the Smart India Hackathon 2019 edition 
+                    for the problem statement "Inconsistency detection in medical annotations". During the summer internship 
+                    in my sophomore year, I worked with Dr. K. Chandrasekaran at NIT Surathkal and published a research paper 
+                    on "Data-Driven Stillbirth Prediction and Analysis of Risk Factors in Pregnancy".
+                    Till now, I've been tinkering with a lot of stuff in tech, dipping my fingers in all waters including but not limited to
+                    web 2.0 (which is what I do for a living), metaverse, creative-coding, machine learning, cryptocurrency etc.
+                    to the point that I can say I'm a fast learner for real but no guarantee for the memory.
                 </p>
                 <a href="https://drive.google.com/file/d/1XS5WcyKyFFRxiDVf800RS0bP7KAE4SV4/view?usp=sharing"
                     target="_blank" rel="noopener noreferrer">View Resume</a>
@@ -77,61 +80,61 @@
                 <table class="skills-table">
                     <tr>
                         <th>LANGUAGES</th>
-                        <th>FRONTEND</th>
-                        <th>BACKEND</th>
-                        <th>LIBRARIES</th>
+                        <th>WEB 2.0</th>
+                        <th>WEB 3.0</th>
+                        <th>ML/DL LIBS</th>
                         <th>DATABASE</th>
                         <th>OTHER</th>
                         <th>OS</th>
                     </tr>
                     <tr>
-                        <td>C/C++</td>
-                        <td>React</td>
-                        <td>Node</td>
+                        <td>JavaScript (ES6+)</td>
+                        <td>Node+Express</td>
+                        <td>Unity</td>
                         <td>Pandas</td>
-                        <td>MySQL</td>
+                        <td>MySQL/Oracle</td>
                         <td>Bash</td>
                         <td>Ubuntu/Linux</td>
                     </tr>
                     <tr>
-                        <td>JavaScript (ES6)</td>
-                        <td>HTML5</td>
-                        <td>Express</td>
-                        <td>Numpy</td>
-                        <td>Firebase</td>
-                        <td>Git & Github</td>
-                        <td>Windows</td>
-                    </tr>
-                    <tr>
-                        <td>Python</td>
-                        <td>CSS3</td>
+                        <td>C/C++</td>
                         <td>Loopback</td>
-                        <td>Scikit-learn</td>
-                        <td>SQLite</td>
-                        <td>Latex</td>
+                        <td>Three.js</td>
+                        <td>Numpy</td>
+                        <td>Firebase/Firestore</td>
+                        <td>Git</td>
                         <td>Mac OS</td>
                     </tr>
                     <tr>
-                        <td>Java</td>
-                        <td></td>
-                        <td>Socket.io</td>
-                        <td>D3.js</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Python</td>
+                        <td>React/Angular</td>
+                        <td>Blender</td>
+                        <td>Scikit-learn</td>
+                        <td>SQLite</td>
+                        <td>Latex</td>
+                        <td>Windows</td>
                     </tr>
                     <tr>
+                        <td>C#</td>
+                        <td>Elastic Search</td>
+                        <td></td>
                         <td>GNU Octave</td>
                         <td></td>
-                        <td>Django</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Redis</td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td>SQL</td>
                         <td></td>
+                        <td>NGINX</td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -283,7 +286,7 @@
     </section>
 
     <footer>
-        <span class="credit">Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2020 All rights
+        <span class="credit">Created by Aravind Unnikrishnan | <span class="far fa-copyright"></span> 2023 All rights
             reserved.</span>
         <span class="social">
             <i class="fab fa-github"></i><a href="https://github.com/aravindmathradan">aravindmathradan</a>
