Update project links

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <div class="column right">
                         <h3 class="project-title">Lantern.io</h3>
                         <p>An open-source in-browser markdown editor for modern note-taking.</p>
-                        <a href="https://lantern-notes.herokuapp.com/" target="_blank" rel="noopener noreferrer">Open
+                        <a href="https://lantern-notes.onrender.com/" target="_blank" rel="noopener noreferrer">Open
                             app</a>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                     <tr>
                         <th>&bull;&emsp;Gesture Games</th>
                         <td>An in-browser gaming arena for gesture and voice controlled games. <a
-                                href="https://gesture-games.herokuapp.com/" target="_blank"
+                                href="https://gesture-games.onrender.com/" target="_blank"
                                 rel="noopener noreferrer">[Webapp]</a> <a
                                 href="https://github.com/aravindmathradan/gesture-games">[Github]</a></td>
                     </tr>
