--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 >valuefy</a
-              >. When not working, I try to build applications to solve problems
+              >. When I can take some time from official work, I try to build applications to solve problems
               (sometimes non-existent) that could potentially help people. Due
               to my lack of motivation to sell, whatever I build usually goes to
               a cold repo in my github and eventually to the freezing artic code
